adding github workflow

--- a/bookingservice/Dockerfile
+++ b/bookingservice/Dockerfile
@@ -1,8 +1,6 @@
-FROM ubuntu:bionic
+FROM scratch
 
 COPY bookingservice /bookingservice
-RUN useradd bookingservice
-USER bookingservice
 
 ENV LISTEN=0.0.0.0:9191
 EXPOSE 9191
