--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -1,4 +1,4 @@
-name: Docker test
+name: ci test
 
 on:
   push:
@@ -20,8 +20,8 @@ jobs:
         go-version: 1.18
       id: go
 
-    - name: check out go code into the go module directory
+    - name: check out code into the go module directory
       run:  actions/checkout@v3  
 
     - name: Test
-      run: make test
+      run: make run
