--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -14,14 +14,13 @@ jobs:
     
       
     steps:
+    - uses:  actions/checkout@v3 
+     
     - name: set up go
       uses: actions/setup-go@v3
       with: 
         go-version: 1.18
       id: go
-
-    - name: check out code into the go module directory
-      run:  actions/checkout@v3  
 
     - name: Test
       run: make run
